# table-z-driver

./: .gitignore  Cargo.toml  LICENSE  readme.md  table_z_utils.yaml
docs/: doc.excalidraw
driver/: Cargo.toml
driver/src/: main.rs
driver/src/backup/: main_usb_read.rs
driver/src/com/: socket.rs
driver/src/config/: mod.rs  yaml.rs
driver/src/hotplug/: hotplug.rs
driver/src/reader/: mod.rs  reader.rs
driver/src/translator/: tablet_m100_translator.rs  translator.rs
driver/src/virtual_device/: device.rs  mod.rs
src/: main.rs
src/backup/: device.rs  hotplug_without_thread.rs  main_Hotplug.rs  main_pooling.rs  main_test_virtual_device.rs  usb_reader.rs
src/com/: socket.rs
src/config/: mod.rs  yaml.rs
src/hotplug/: mod.rs
src/reader/: reader.rs
src/translator/: mod.rs  tablet_m100_translator.rs  translator.rs
table_z_config/: Cargo.toml
table_z_config/src/: lib.rs
ui/: package-lock.json  package.json
ui/src/: App.css  App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs
ui/src/components/: ConfigTab.tsx  StatusTab.tsx
